--- a/index.html
+++ b/index.html
@@ -1,4 +1,26 @@
+<!DOCTYPE html>
+
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="">
+    </head>
+    <body>
+
+        
+    </body>
+</html>
+background-color: #060419;
+
+
+
+
 Welcome to my personal page.
+
 
 I am a software developer in training with a major focus on computational linguistics.
 
